fix cut off shape

--- a/src/styles/pages/landing.scss
+++ b/src/styles/pages/landing.scss
@@ -32,6 +32,9 @@
   position: fixed;
   top: 0;
   left: 0;
+  height:100vh;
+  width: 100vw;
+
 }
 
 .page--landing a {
